--- a/examples/minesweeper/package.json
+++ b/examples/minesweeper/package.json
@@ -8,6 +8,7 @@
     "react-redux": "^5.0.6",
     "react-scripts": "1.0.17",
     "redux": "^3.7.2",
+    "redux-logger": "^3.0.6",
     "redux-persist": "^5.4.0"
   },
   "scripts": {
