--- a/examples/static_data/package.json
+++ b/examples/static_data/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
+    "redux-logger": "^3.0.6",
     "redux-persist": "^5.4.0"
   },
   "scripts": {
