--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "presets": [
       "es2015",
       "stage-1"
+    ],
+    "plugins": [
+      "transform-decorators-legacy"
     ]
   },
   "repository": {
@@ -19,16 +22,11 @@
     "url": "git@github.com:pixellyte/redux-data-components.git"
   },
   "dependencies": {
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0",
-    "react-redux": "^5.0.6",
-    "react-router": "^4.2.0",
-    "react-router-redux": "^4.0.8",
-    "redux": "^3.7.2",
-    "redux-persist": "^5.4.0"
+    "redux": "^3.7.2"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-env": "^1.6.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-1": "^6.24.1",
