--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "presets": [
       "es2015",
       "stage-1"
+    ],
+    "plugins": [
+      "transform-decorators-legacy"
     ]
   },
   "repository": {
@@ -23,6 +26,7 @@
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-env": "^1.6.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-1": "^6.24.1",
